@@ -12,7 +12,19 @@ static int driver_trace = 0;
 #  include <sys/soundlib.h>
 #endif
 
-void *handle;
+#if (SND_LIB_MINOR > 4)
+#  define ALSA_5_API
+#endif
+
+static snd_pcm_t *alsa_sound_handle;
+
+#ifdef ALSA_5_API
+static snd_pcm_format_t alsa_format;
+static snd_pcm_channel_info_t alsa_pinfo;
+static int alsa_direction = SND_PCM_OPEN_PLAYBACK;
+static int alsa_mode = SND_PCM_MODE_BLOCK;
+static int alsa_channel = SND_PCM_CHANNEL_PLAYBACK;
+#endif
 
 /* so that EsounD can use other cards besides the first */
 #ifndef ALSACARD
@@ -40,8 +52,7 @@ alsa_print_error (int code, int card, int device) {
 	if( device >= 0 ) {
 	    fprintf (stderr, "card %d pcm device %d open failed: %s\n",
 	    	     card, device, snd_strerror( code ) );
-	}
-	else {
+	} else {
 	    fprintf( stderr, "card %d open failed: %s\n", 
 	  	     card, snd_strerror( code ) );
 	}
@@ -50,87 +61,125 @@ alsa_print_error (int code, int card, int device) {
 
 int esd_audio_open()
 {
-    snd_pcm_format_t format;
-    snd_pcm_playback_params_t params;
-    int ret, mode = SND_PCM_OPEN_PLAYBACK;
     int mask, card=ALSACARD, device=ALSADEVICE;
+    int nbr_cards, ret;
     char buf[256];
-    void *ctl_handle;
     struct snd_ctl_hw_info hw_info;
-  
+    static int frag_size = 4*1024;
+
+#ifdef ALSA_5_API
+    static int frag_count = 0;
+#else
+    static int frag-count = 2;
+#endif
+
+#ifdef ALSA_5_API
+    snd_pcm_channel_params_t params;
+    snd_pcm_channel_setup_t setup;
+#else
+    int alsa_direction = SND_PCM_OPEN_PLAYBACK;
+    snd_pcm_format_t alsa_format;
+    snd_pcm_playback_params_t params;
+#endif
+
+    snd_ctl_t *ctl_handle;
+
+    if( driver_trace ) {
+        fprintf( stderr, "Using ALSA %s\n", SND_LIB_VERSION_STR );
+    }
+
     /* if recording, set for full duplex mode */
-    if ( (esd_audio_format & ESD_MASK_FUNC) == ESD_RECORD )
-        mode = SND_PCM_OPEN_DUPLEX;
+    if ( (esd_audio_format & ESD_MASK_FUNC) == ESD_RECORD ) {
+	alsa_direction = SND_PCM_OPEN_DUPLEX;
+#ifdef ALSA_5_API
+	/* alsa_channel = SND_PCM_CHANNEL_CAPTURE; */
+#endif
+    }
   
 #if 0 /* single card code, just in case anyone needs it */
-    if ( ret = snd_pcm_open( &handle, ALSACARD, ALSADEVICE, mode ) < 0) {
-	perror( "snd_pcm_open" );
-	fprintf( stderr, "open failed: %s\n", snd_strerror( ret ) );
-	esd_audio_close();
-	esd_audio_fd = -1;
-	return ( -1 );
+    if ( ret = snd_pcm_open( &alsa_sound_handle, ALSACARD, ALSADEVICE, alsa_direction ) < 0) {
+      perror( "snd_pcm_open" );
+          fprintf( stderr, "open failed: %s\n", snd_strerror( ret ) );
+          esd_audio_close();
+          esd_audio_fd = -1;
+          return ( -1 );
     }
     
 #else /* multiple card code, open the first available.  someone check it? */
 
     mask = snd_cards_mask();
     if ( !mask ) {
-	fprintf( stderr, "audio_alsa: no cards found!" );
-	esd_audio_close();
-	esd_audio_fd = -1;
-	return ( -1 );
+          fprintf( stderr, "audio_alsa: no cards found!" );
+          esd_audio_close();
+          esd_audio_fd = -1;
+          return ( -1 );
     }
 
-    handle = NULL;
-    for ( card=0; ( card < SND_CARDS ) && (handle == NULL); card++ ) {
-	if ( mask & (1 << card) ) {
-	    /* open sound card */
-	    ret = snd_ctl_open( &ctl_handle, card );
+    alsa_sound_handle = NULL;
 
-	    if ( ret < 0 ) {
-		alsa_print_error( ret, card, -1 );
-		continue;
-	    }
-	    
-	    if ( driver_trace ) {
+#ifdef ALSA_5_API
+    nbr_cards = snd_cards();
+#else
+    nbr_cards = SND_CARDS;
+#endif
+
+    if( driver_trace ) {
+       fprintf( stderr, "esd: Found %d card(s)\n", nbr_cards );
+    }
+
+    for ( card=0; ( card < nbr_cards ) && (alsa_sound_handle == NULL); card++ ) {
+            if( driver_trace ) {
+                fprintf( stderr, "esd: trying alsa card %d\n", card );
+            }
+
+            /* open sound card */
+            ret = snd_ctl_open( &ctl_handle, card );
+            if ( ret < 0 ) {
+                alsa_print_error( ret, card, -1 );
+                continue;
+            }
+
+	    if (driver_trace ) {
 		fprintf( stderr, "opened alsa card %d\n", card );
 	    }
-	   
-	    /* get info on sound card */
-	    ret = snd_ctl_hw_info( ctl_handle, &hw_info );
-	    if ( ret < 0 ) {
-		alsa_print_error( ret, card, -1 );
-		continue;
-	    }
-	    ret = snd_ctl_close( ctl_handle );
-	    if ( ret < 0 ) {
-		alsa_print_error( ret, card, -1 );
-		continue;
-	    }
+  
+            /* get info on sound card */
+            ret = snd_ctl_hw_info( ctl_handle, &hw_info );
+            if ( ret < 0 ) {
+                alsa_print_error( ret, card, -1 );
+                continue;
+            }
+            ret = snd_ctl_close( ctl_handle );
+            if ( ret < 0 ) {
+                alsa_print_error( ret, card, -1 );
+                continue;
+            }
 
-	    /* search for available pcm device on card */
-	    for ( device=0; (device < hw_info.pcmdevs) && (handle == NULL);
-	    	 device++ ) {
-		ret = snd_pcm_open( &handle, card, device, mode );
-		if ( ret < 0 ) {
-		    alsa_print_error( ret, card, device );
-		    handle = NULL;
-		    continue;
-		}
-	    }
-	    device--;
+            /* search for available pcm device on card */
+            for ( device=0; 
+		  (device < hw_info.pcmdevs) && (alsa_sound_handle == NULL);
+		   device++ ) {
+                ret = snd_pcm_open( &alsa_sound_handle,
+				     card, device, alsa_direction );
+                if ( ret < 0 ) {
+                    alsa_print_error( ret, card, device );
+                    alsa_sound_handle = NULL;
+                    continue;
+                }
+            }
+            device--;
 	    
-	    if ( (handle != NULL) && driver_trace ) {
+	    if ( (alsa_sound_handle != NULL) && driver_trace ) {
 	       fprintf( stderr, "opened alsa card %d pcm device %d\n",
 		      card, device );
 	    }
-	}
+     
     }
     card--;
   
-    if ( handle == NULL ) {
-	fprintf( stderr, "Couldn't open any alsa card! Last card tried was %d\n", 
-		 card );
+    if ( alsa_sound_handle == NULL ) {
+	fprintf( stderr, "Couldn't open any alsa card! Last card tried was %d\n"
+		 ,card );
 	fprintf( stderr, "Error opening card %d: %s\n", 
 		 card, snd_strerror( ret ) );  
 	
@@ -139,62 +188,142 @@ int esd_audio_open()
 	return ( -1 );
     }
     
+#endif  /* Multiple cards */
+
+#ifdef ALSA_5_API
+    memset(&alsa_pinfo, 0, sizeof(alsa_pinfo));
+    ret = snd_pcm_channel_info( alsa_sound_handle, &alsa_pinfo );
+    if ( ret ) {
+        fprintf( stderr, "error: %s: in snd_pcm_channel_info\n", snd_strerror(ret) );
+        return( -1 );
+    }
+
+    memset(&params, 0, sizeof(params));
+    params.buf.block.frag_size = frag_size;
+    params.buf.block.frags_max = frag_count;
+    params.buf.block.frags_min = 1;
+    params.channel = alsa_channel;
+    params.mode = alsa_mode;
+    params.start_mode = SND_PCM_START_FULL;
+    params.stop_mode = SND_PCM_STOP_STOP;
+
+    memset(&alsa_format, 0, sizeof(alsa_format));
 #endif
 
     /* set the sound driver audio format for playback */
-    format.format = ( (esd_audio_format & ESD_MASK_BITS) == ESD_BITS16 )
+    alsa_format.format = ( (esd_audio_format & ESD_MASK_BITS) == ESD_BITS16 )
 	? /* 16 bit */ SND_PCM_SFMT_S16_LE : /* 8 bit */ SND_PCM_SFMT_U8;
-    format.rate = esd_audio_rate;
-    format.channels = ( ( esd_audio_format & ESD_MASK_CHAN) == ESD_STEREO ) 
-	? 2 : 1;
+    alsa_format.rate = esd_audio_rate;
 
-    if( mode == SND_PCM_OPEN_DUPLEX || mode == SND_PCM_OPEN_PLAYBACK ) {
-        if ( ( ret = snd_pcm_playback_format( handle, &format ) ) < 0 ) {
-	    fprintf( stderr, "set playback format failed: %s\n", snd_strerror( ret ) );
-	    esd_audio_close();
-	    esd_audio_fd = -1;
-	    return ( -1 );
-	}
+#ifdef ALSA_5_API
+    alsa_format.voices = ( ( esd_audio_format & ESD_MASK_CHAN) == ESD_STEREO )
+	                 ? 2 : 1;
+
+    /* Use supported interleave */
+    if(alsa_pinfo.flags & SND_PCM_CHNINFO_INTERLEAVE ) {
+       alsa_format.interleave = 1;
+       if( driver_trace) fprintf( stderr, "using interleave mode\n");
     }
-    if( mode == SND_PCM_OPEN_DUPLEX || mode == SND_PCM_OPEN_RECORD ) {
-        if ( ( ret = snd_pcm_record_format( handle, &format ) ) < 0 ) {
-	    fprintf( stderr, "set record format failed: %s\n", snd_strerror( ret ) );
-	    esd_audio_close();
-	    esd_audio_fd = -1;
-	    return ( -1 );
-	}
+     if(alsa_pinfo.flags & SND_PCM_CHNINFO_NONINTERLEAVE ) {
+       alsa_format.interleave = 0;
+       if( driver_trace) fprintf( stderr, "esd: using noninterleave mode\n");
+    }
+
+    memcpy(&params.format, &alsa_format, sizeof(alsa_format));
+
+    snd_pcm_channel_flush( alsa_sound_handle, alsa_channel );
+
+    ret = snd_pcm_channel_params( alsa_sound_handle, &params );
+    if ( ret ) {
+              fprintf( stderr, "error: %s: in snd_pcm_channel_params\n", snd_strerror(ret) );
+          return( -1 );
+    }
+
+    ret = snd_pcm_channel_prepare( alsa_sound_handle, alsa_channel );
+    if ( ret ) {
+                      fprintf( stderr, "error: %s: in snd_pcm_channel_prepare\n", snd_strerror(ret) );
+        return(-1);
+    }
+
+
+    memset(&setup, 0, sizeof(setup));
+    setup.mode = alsa_mode;
+    setup.channel = alsa_channel;
+    ret = snd_pcm_channel_setup( alsa_sound_handle, &setup );
+    if( ret ) {
+        fprintf( stderr, "error: %s: in snd_pcm_channel_setup\n", snd_strerror(ret) );
+        return(-1);
+    }
+
+    if ( params.format.rate != esd_audio_rate || params.format.voices != 2
+                       || params.format.format != SND_PCM_SFMT_S16_LE ) {
+                      fprintf( stderr, "set format didn't work.");
+                      return(-1);
+        }
+
+#else
+    alsa_format.channels = ( ( esd_audio_format & ESD_MASK_CHAN) == ESD_STEREO )
+              ? 2 : 1;
+
+     if( alsa_direction == SND_PCM_OPEN_DUPLEX || alsa_direction == SND_PCM_OPEN_PLAYBACK ) {
+        if ( ( ret = snd_pcm_playback_format( alsa_sound_handle, &alsa_format ) ) < 0 ) {
+            fprintf( stderr, "set playback format failed: %s\n", snd_strerror( ret ) );
+            esd_audio_close();
+            esd_audio_fd = -1;
+            return ( -1 );
+              }
+    }
+
+    if( alsa_direction == SND_PCM_OPEN_DUPLEX || 
+        alsa_direction == SND_PCM_OPEN_RECORD ) {
+        if ( ( ret = snd_pcm_record_format( alsa_sound_handle, 
+               &alsa_format ) ) < 0 ) {
+            fprintf( stderr, "set record format failed: %s\n", 
+	             snd_strerror( ret ) );
+            esd_audio_close();
+            esd_audio_fd = -1;
+            return ( -1 );
+        }
     }    
 
-    params.fragment_size = 4*1024;
-    params.fragments_max = 2;
+    params.fragment_size = frag_size;
+    params.fragments_max = frag_count;
     params.fragments_room = 1;
-    ret = snd_pcm_playback_params( handle, &params );
+    ret = snd_pcm_playback_params( alsa_sound_handle, &params );
     if ( ret ) {
 	printf( "error: %s: in snd_pcm_playback_params\n", snd_strerror(ret) );
     }
+    if ( alsa_format.rate != esd_audio_rate || alsa_format.channels != 2
+       || alsa_format.format != SND_PCM_SFMT_S16_LE )
+        fprintf( stderr, "set format didn't work.");
+
+#endif /* ALSA_5_API */
+
 
 /* shouldn't use non-blocking mode, because you have to sit in a loop rewriting
    data until success (eating cpu time in the process).  This wasn't being done,
    and didn't work on my machine.  Or you could use select(man page 2), I guess.
 */
 #if 0
-    ret = snd_pcm_block_mode( handle, 1 );
+    ret = snd_pcm_block_mode( alsa_sound_handle, 1 );
     if ( ret )
 	printf( "error: %s: in snd_pcm_block_mode\n", snd_strerror(ret));
 #endif
 
-    if ( format.rate != esd_audio_rate || format.channels != 2 
-	 || format.format != SND_PCM_SFMT_S16_LE )
-	printf("set format didn't work.");
-
     /* no descriptor for ALSAlib */
-    return ( esd_audio_fd = snd_pcm_file_descriptor( handle ) ); 
+#ifdef ALSA_5_API
+    return ( esd_audio_fd = snd_pcm_file_descriptor( alsa_sound_handle,
+						     alsa_channel ) );
+#else
+    return ( esd_audio_fd = snd_pcm_file_descriptor(alsa_sound_handle);
+#endif
+
 }
 
 #define ARCH_esd_audio_close
 void esd_audio_close()
 {
-    snd_pcm_close( handle );
+    snd_pcm_close( alsa_sound_handle );
 }
 
 #define ARCH_esd_audio_pause
@@ -208,7 +337,7 @@ void esd_audio_pause()
 #define ARCH_esd_audio_read
 int esd_audio_read( void *buffer, int buf_size )
 {
-    return (snd_pcm_read( handle, buffer, buf_size ));
+    return (snd_pcm_read( alsa_sound_handle, buffer, buf_size ));
 }
 
 int writes;
@@ -216,12 +345,45 @@ int writes;
 int esd_audio_write( void *buffer, int buf_size )
 {
     int i=0;
-    i = snd_pcm_write( handle, buffer, buf_size);
+
+#ifdef ALSA_5_API
+    snd_pcm_channel_status_t status;
+    int ret;
+#endif
+
+    i = snd_pcm_write( alsa_sound_handle, buffer, buf_size);
+    if( i<0 ) {
+#if 0
+        fprintf( stderr, "error: %s: in snd_pcm_write\n", snd_strerror(i) );
+#endif
+    }
+
+#ifdef ALSA_5_API
+    ret = snd_pcm_channel_status( alsa_sound_handle, &status );
+    if( ret ) {
+                  if( driver_trace ) fprintf( stderr, "error: %s: in snd_pcm_channel_status\n", snd_strerror(ret) );
+              return(-1);
+    }
+    if( status.underrun ) {
+        snd_pcm_channel_flush( alsa_sound_handle, alsa_channel );
+        snd_pcm_playback_prepare( alsa_sound_handle );
+        snd_pcm_write( alsa_sound_handle, buffer, buf_size );
+        if (snd_pcm_channel_status( alsa_sound_handle, &status ) < 0 && driver_trace) {
+            fprintf(stderr, "ALSA: could not get channel status. giving up\n");
+            return -1;
+              }
+              if (status.underrun) {
+                  if( driver_trace ) fprintf(stderr, "ALSA: write error. giving up\n");
+                        return -1;
+              }
+    }
+#endif /* ALSA_5_API */
+
     writes += i;
     return (i);
 }
 
-#define ARCH_esd_audio_flush
+	#define ARCH_esd_audio_flush
 void esd_audio_flush()
 {
     fsync( esd_audio_fd );
