@@ -1,3 +1,8 @@
+2000-03-02  Mark Crichton  <crichton@gimp.org>
+
+	* audio_alsa.c: Added support from Rik to add ALSA 0.5 API support
+	Also backwards compatable.
+
 2000-01-04  Timur Bakeyev  <mc@bat.ru>
 
 	* esddsp.c: Wrapped with #ifdef SNDCTL_DSP_GETCAPS. Old OSS driver 
